--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artin Zareie 40231969</title>
+    <title>Shayan Niakousari</title>
 
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <main>
-        <h1 class="title">Artin's Keyboard</h1>
+        <h1 class="title">Macbook Keyboard</h1>
         <div class="container">
             
             <div class="flex">
